--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-Django==1.5.4
-PIL==1.1.7
-Pygments==1.6
-djangorestframework==2.3.8
-wsgiref==0.1.2
+Django(1.5.4)
+Pygments(1.6)
+djangorestframework(2.3.8)
+django-bootstrap3 (1.1.0)
+django-pygments (0.1)
+django-suit (0.2.5)
+numpy (1.7.1)
+PIL (1.1.7)
+pip (1.4.1)
+setuptools (0.9.8)
+Shapely (1.2.18)
+wsgiref (0.1.2)
